; ModuleID = '/home/carl/AnghaBench/git/extr_apply.c_check_whitespace.c'
source_filename = "/home/carl/AnghaBench/git/extr_apply.c_check_whitespace.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.apply_state = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.apply_state*, i8*, i32, i32)* @check_whitespace to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @check_whitespace(%struct.apply_state* %0, i8* %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.apply_state*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.apply_state* %0, %struct.apply_state** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %10 = load i8*, i8** %6, align 8
  %11 = getelementptr inbounds i8, i8* %10, i64 1
  %12 = load i32, i32* %7, align 4
  %13 = sub nsw i32 %12, 1
  %14 = load i32, i32* %8, align 4
  %15 = call i32 @ws_check(i8* %11, i32 %13, i32 %14)
  store i32 %15, i32* %9, align 4
  %16 = load %struct.apply_state*, %struct.apply_state** %5, align 8
  %17 = load i32, i32* %9, align 4
  %18 = load i8*, i8** %6, align 8
  %19 = getelementptr inbounds i8, i8* %18, i64 1
  %20 = load i32, i32* %7, align 4
  %21 = sub nsw i32 %20, 2
  %22 = load %struct.apply_state*, %struct.apply_state** %5, align 8
  %23 = getelementptr inbounds %struct.apply_state, %struct.apply_state* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @record_ws_error(%struct.apply_state* %16, i32 %17, i8* %19, i32 %21, i32 %24)
  ret void
}

declare dso_local i32 @ws_check(i8*, i32, i32) #1

declare dso_local i32 @record_ws_error(%struct.apply_state*, i32, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
